--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
                 <td colspan="7">Did not bat <span><a href="">Suresh Raina,</a> <a href="">Harbajan Singh,</a> <a href="">Zaheer Khan,</a> <a href="">Munaf Patel,</a> <a href="">S Sreesanth</a> </span></td>
             </tr>
         </table>
-        <p class="divFoot">Made with <img src="/assets/prograd-heart.svg"> by prograds</p>
+        <p class="divFoot">Made with <img src="assets/prograd-heart.svg"> by prograds</p>
     </div>
     <!-- Type your code here -->
-   <footer class="footer">Made with <img src="/assets/prograd-heart.svg"> by ProGrad</footer>
+   <footer class="footer">Made with <img src="assets/prograd-heart.svg"> by ProGrad</footer>
    <script src="./script.js"></script>
 </body>
 </html>
